--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -175,7 +175,7 @@
         <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
     </div> -->
     <span>
-        <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">Send Feedback on web experience</a>
+        <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">send feedback on web experience</a>
     </span>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
