--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -128,7 +128,7 @@
             <p class="header">Join the Discussion</h2>
             <p>Hi there. Welcome to my personal website, a place for me to log snapshots of my life over the years, share stories as told by others, and periodically post technical content that may interest a couple other people. Thank you for being part of the community.</p>
         </div>
-        <button onclick="document.getElementById('id01').style.display='block'">Send feedback</button>
+        <!-- <button onclick="document.getElementById('id01').style.display='block'">Send feedback</button> -->
         {% if user.is_authenticated %}
         <button onclick="document.getElementById('id02').style.display='block'">Add a comment</button>
         {% else %}
