--- a/core/static/core/blog.css
+++ b/core/static/core/blog.css
@@ -185,6 +185,18 @@ footer a:hover {
         grid-gap: 20px;
         margin: 30px 0 0 0;
     }
+    .pageheader {
+        font-size:30px;
+    }
+    .pagesubheader {
+        font-size: 12px;
+    }
+    .articlesec,
+    .articlesec:hover {
+        grid-row: 1fr 1fr;
+        grid-gap: 10px;
+        cursor: pointer;
+    }
     .blogcategory {
         font-size: 8px;
     }
