--- a/staticfiles/core/blog.css
+++ b/staticfiles/core/blog.css
@@ -49,6 +49,11 @@
     margin: 40px 0 0 0;
 }
 .articlediv {
+    border: 1px solid #ccc;
+    border-radius: 2%;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 10px;
     filter: grayscale();
     transition: 1s;
 }
@@ -61,7 +66,7 @@
     text-decoration: none;
     margin: 3%;
     display: grid;
-    grid-column: 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 10px;
     cursor: pointer;
 }
@@ -92,7 +97,6 @@
     margin: 2% 0% 0% 0%;
     display: grid;
     grid-gap: 8px;
-    place-items: center;
     text-align: center;
 }
 .blogcategory {
@@ -176,12 +180,12 @@ footer a:hover {
 }
 
 /** For mobile devices **/
-@media screen and (max-width: 720px) and (min-width: 320px) {
+@media screen and (max-width: 720px) {
     .blogpage {
-        margin: 30px 1vw 70px 1vw;
+        margin: 20px 1vw 70px 1vw;
     }
     #blogs {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-gap: 20px;
         margin: 30px 0 0 0;
     }
@@ -191,35 +195,42 @@ footer a:hover {
     .pagesubheader {
         font-size: 12px;
     }
+    .articlediv {
+        border-radius: 12px;
+        grid-gap: 10px;
+        filter: grayscale();
+        transition: 1s;
+    }
     .articlesec,
     .articlesec:hover {
-        grid-row: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
         cursor: pointer;
     }
+    .blogmeta {
+        margin: 0;
+        display: flex;
+        /* gap: 8px; */
+        flex-direction: column;
+        align-content: space-between;
+        text-align: left;
+    }
     .blogcategory {
+        text-align: left;
         font-size: 8px;
     }
     .blogtitle {
-        font-size: 14px;
+        text-align: left;
+        font-size: 12px;
     }
+    .blogdate {
+        text-align: left;
+        font-size: 11px;
+    }
+    
     footer {
         padding: 3% 1%;
         flex-direction: column;
         grid-gap: 10px;
-    }
-}
-
-@media screen and (max-width: 319px) {
-    .blogpage {
-        margin: 30px 1vw 70px 1vw;
-    }
-    #blogs {
-        grid-template-columns: 1fr;
-        grid-gap: 20px;
-        margin: 30px 0 0 0;
-    }
-    .blogtitle {
-        font-size: medium;
     }
 }
