--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -45,13 +45,9 @@
 {% block page %}
 <div class="podpage">
     <section class="podintro">
-        <img src="{% static 'core/media/KSP.jpg' %}" alt="Kubonga Show, a podcast by Leroy Buliro" style="width: 100%; height: auto;">
         <div class="podside">
-            <h2>About</h2>
-            <p class="pod-deet">Translated to "talk" in Swahili slang - "Kubonga" is a seasonal, meandering conversation with guests where they tell their stories, converse on topics close to their heart and, yeah, just have a nice chat</p>
+            <img class="podlogo" src="{% static 'core/media/podtitle.png' %}" alt="Kubonga Show, a podcast by Leroy Buliro" style="width: 100%; height: auto;"> 
             <div>
-                <h4>LISTEN & SUBSCRIBE</h4>
-                <br/>
                 <div class="podurls">
                     <a href="https://podcasts.apple.com/us/podcast/kubonga-show/id1470474649" target="_blank">
                         <img src="{% static 'core/media/appleBadge.svg' %}"/>                        
@@ -65,13 +61,15 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="curve">
+        <div class="curve">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
             </svg>
-        </div> -->
+        </div>
     </section>
     <section class="episodes">
+        <h2>About</h2>
+        <p class="pod-deet">Translated to "talk" in Swahili slang - "Kubonga" is a seasonal, meandering conversation with guests where they tell their stories, converse on topics close to their heart and, yeah, just have a nice chat</p>
         <h3 style="color: #fff;">EPISODES</h3>
         <iframe class="episode" src="https://open.spotify.com/embed/episode/190Ajvo1MkGWv5VrSIfZUi?utm_source=generator&theme=0" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe class="episode">
         <iframe class="episode" src="https://open.spotify.com/embed/episode/1cbnVvoYtDxj5Ool1jgQLa?utm_source=generator&theme=0&t=0" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe class="episode">
@@ -85,9 +83,9 @@
         <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-black.png' %}" alt="twitter" width="auto" height="22" ></a>
         <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-black.png' %}" alt="instagram" width="auto" height="22" ></a>
     </div> -->
-    <span>
+    <!-- <span>
         <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">send feedback on web experience</a>
-    </span>
+    </span> -->
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
         <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
