--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -157,8 +157,8 @@
     </div> 
 </div>
 {% if user.is_authenticated %}
-<div id="id02" class="Cmodal">
-    <div class="Cmodal-content" style="max-width:600px">
+<div id="id02" class="modal">
+    <div class="modal-content" style="max-width:600px">
         <div style="padding: 0.01em;">
             <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">Add a comment!</p>
             <span onclick="document.getElementById('id02').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
@@ -190,7 +190,7 @@
         <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
     </div> -->
     <span>
-        <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">send feedback on web experience</a>
+        <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">Feedback</a>
     </span>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
