--- a/staticfiles/core/blog.css
+++ b/staticfiles/core/blog.css
@@ -49,7 +49,8 @@
     margin: 40px 0 0 0;
 }
 .articlediv {
-    border: 1px solid #ccc;
+    border: none;
+    /* border: 1px solid #ccc; */
     border-radius: 2%;
     display: flex;
     flex-direction: column;
@@ -111,7 +112,7 @@
     font-family: Josefin Sans;
     font-weight: bold;
     text-transform: uppercase;
-    line-height: 1.4rem;
+    line-height: 1rem;
     filter: none;
 }
 .extract, .extract > p {
