--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -46,7 +46,7 @@
 <div class="podpage">
     <section class="podintro">
         <div class="podside">
-            <img class="podlogo" src="{% static 'core/media/podtitle.png' %}" alt="Kubonga Show, a podcast by Leroy Buliro" style="width: 100%; height: auto;"> 
+            <img class="podlogo" src="{% static 'core/media/podtitle.png' %}" alt="Kubonga Show, a podcast by Leroy Buliro"> 
             <div>
                 <div class="podurls">
                     <a href="https://podcasts.apple.com/us/podcast/kubonga-show/id1470474649" target="_blank">
