--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -26,17 +26,18 @@ body {
     color: #000000;
 }
 .podside {
+    position: absolute;
+    top: 10%;
+    right: 4%;
+    /* transform: translate(-50%, -50%); */
+    /* width: 480px; */
     display: flex;
     flex-direction: column;
     gap: 20px;
-    position: absolute;
-    top: 30%;
-    right: 30%;
-    transform: translate(-50%, -50%);
-    max-width: 480px;
 }
 .podlogo {
-    width: 480px;
+    width: 700px;
+    height: auto;
 }
 .podurls {
     display: flex;
@@ -65,6 +66,20 @@ body {
 
 /** For mobile devices **/
 
+@media (min-width: 541px) and (max-width: 1540px) {
+    .podside {
+        gap: 30px;
+        top: 22%;
+        right: 7%;
+        /* width: 200px; */
+    }
+    .podlogo {
+        width: 330px;
+    }
+}
+
+/** For mobile devices **/
+
 @media only screen and (max-width: 541px) {
     .podpage {
         margin: 0 0 0 0;
@@ -75,11 +90,12 @@ body {
     }
     .podside {
         gap: 30px;
-        top: 40%;
-        right: 28%;
+        top: 28%;
+        right: 2%;
+        /* width: 200px; */
     }
     .podlogo {
-        width: 370px;
+        width: 210px;
     }
     .pod-deet {
         font-size: 20px;
@@ -87,8 +103,8 @@ body {
     }
     .podurls {
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: left;
+        align-items: flex-end;
+        justify-content: right;
         grid-gap: 10px;
     }
     .podurls img {
