--- a/staticfiles/core/blog.css
+++ b/staticfiles/core/blog.css
@@ -50,7 +50,7 @@
 }
 .articlediv {
     border: none;
-    /* border: 1px solid #ccc; */
+    /* border: 1px solid #cccccc70; */
     border-radius: 2%;
     display: flex;
     flex-direction: column;
@@ -204,7 +204,7 @@ footer a:hover {
     }
     .articlesec,
     .articlesec:hover {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-gap: 10px;
         cursor: pointer;
     }
@@ -214,19 +214,15 @@ footer a:hover {
         /* gap: 8px; */
         flex-direction: column;
         align-content: space-between;
-        text-align: left;
     }
     .blogcategory {
-        text-align: left;
-        font-size: 8px;
+        font-size: 10px;
     }
     .blogtitle {
-        text-align: left;
-        font-size: 12px;
+        font-size: 14px;
     }
     .blogdate {
-        text-align: left;
-        font-size: 8px;
+        font-size: 10px;
     }
     
     footer {
