--- a/staticfiles/core/blog.css
+++ b/staticfiles/core/blog.css
@@ -50,7 +50,7 @@
 }
 .articlediv {
     border: none;
-    /* border: 1px solid #cccccc70; */
+    border: 1px solid #cccccc70;
     border-radius: 2%;
     display: flex;
     flex-direction: column;
