--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -170,8 +170,8 @@
 {% block footer %}
 <footer>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
-    <span>
+    <!-- <span>
         <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
-    </span>
+    </span> -->
 </footer>
 {% endblock footer %}
