--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -87,8 +87,8 @@
         <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">send feedback on web experience</a>
     </span> -->
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
-    <span>
+    <!-- <span>
         <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
-    </span>
+    </span> -->
 </footer>
 {% endblock footer %}
