--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -52,41 +52,41 @@
 <script>
     document.querySelector('.blogpage').addEventListener('load', ()=> {
     
-        const articles = document.querySelectorAll('.articlediv');
+        const articles = document.querySelectorAll('.articlediv')
         const firstload = 8
 
-        document.querySelectorAll('.articlediv').forEach((article)=>
+        articles.forEach((article)=> {
             article.style.display = 'none'
-        );
+        });
 
         if(articles.length >= firstload ) {
-            document.querySelector('#showbtn').style.display='flex';
+            document.querySelector('#showbtn').style.display='flex'
         } else {
-            document.querySelector('#showbtn').style.display='none';
+            document.querySelector('#showbtn').style.display='none'
         };
 
         for(let i = 0; i < firstload; i++){
-            articles[i].style.display = 'block';
-        };
-    });
+            articles[i].style.display = 'block'
+        }
+    })
 
 
-    const articlediv = document.querySelectorAll('.articlediv');
+    const articlediv = document.querySelectorAll('.articlediv')
     var currentindex = 8
 
     document.querySelector('#loadnext').onclick = ()=> {
         
-        var next = 8;
+        const next = 8
 
         for(var i = 0 ; i < next; i++){
             if(currentindex >= articlediv.length) {
-                document.querySelector('#showbtn').style.display='none';
+                document.querySelector('#showbtn').style.display='none'
             } else {
-                articlediv[i+currentindex].style.display = 'block';
+                articlediv[i+currentindex].style.display = 'block'
             }
         }
 
-        currentindex += next;
+        currentindex += next
     };
 </script>
 {% endblock head %}
@@ -166,12 +166,3 @@
     </div>
 </div>
 {% endblock page %}
-
-{% block footer %}
-<footer>
-    <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
-    <!-- <span>
-        <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
-    </span> -->
-</footer>
-{% endblock footer %}
