--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -136,6 +136,7 @@ body {
     line-height: 0;
 }
 .curve svg {
+    margin-bottom: 0;
     position: relative;
     display: block;
     width: calc(144% + 1.3px);
