--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -26,7 +26,7 @@
 
 <link rel="stylesheet" href="{% static 'core/articlelayout.css' %}">
 
-<script>
+<script type="text/javascript">
     document.addEventListener('DOMContentLoaded', ()=> {
         $(document).ready(()=> {
             const background = document.querySelector('.meta')
@@ -98,11 +98,11 @@
                     </a>
                     <div class="stat">
                         <img src="{% static 'core/media/view_black.png' %}" alt="reads" width="20" height="20" >
-                        <span class="stats">{{ article.viewsCount }}</span>
+                        <span class="stats">{{ article.viewCount }}</span>
                     </div>
                     <a href="#commentnow" class="stat">
                         <img src="{% static 'core/media/comment_black.png' %}" alt="post comment" width="20" height="20" >
-                        <span class="stats">{{ commentsCount }}</span>
+                        <span class="stats">{{ article.commentCount }}</span>
                     </a>
                 </div>
             </div>
@@ -138,14 +138,13 @@
         {% if commentsCount == 1 %}
         <p class="responses">1 response</h5>
         {% else %}
-        <p class="responses">{{ commentsCount }} responses</h5>
+        <p class="responses">{{ article.commentCount }} responses</h5>
         {% endif %}
     </div>
 
-    {% if commentsCount >= 1 %}
+    {% if article.comments %}
     <div class="commentsec">
-
-        {% for comment in article.comments.all %}
+        {% for comment in article.comments %}
         <div class="commentBox">
             <section style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-start;">
                 <div>
@@ -155,77 +154,84 @@
                     <p>{{ comment.content | safe }}</p>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 17px;">
-                    {% if request.user.is_authenticated %}
                     <img onclick="document.getElementById('replyComment').style.display='block'" src="{% static 'core/media/reply.svg' %}" alt="reply comment" width="20" height="20" style="cursor: pointer;">
-                    {% endif %}
                     {% if request.user == comment.user %}
                     <img src="{% static 'core/media/delete.svg' %}" alt="delete comment" width="20" height="20" style="cursor: pointer;">
                     {% endif %}
                     <!-- <img src="{% static 'core/media/flag.svg' %}" alt="flag comment" width="20" height="20" style="cursor: pointer;"> -->
                 </div>
             </section>
-            {% if comment.replies %}
-                {% for reply in comment.replies %}
-                <blockquote class="replyBox">
-                    <section style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-start;">
-                        <div>
-                            <p style="text-transform: capitalize; color: #c2c2c2b9; font-weight: bolder;">{{ reply.user.alias }}</p>
-                            <p style="color: #c2c2c2b9;">{{ reply.timestamp | timesince }} ago</p>
-                            <br>
-                            <p>{{ reply.content | safe }}</p>
-                        </div>
-                        <div style="display: flex; flex-direction: row; gap: 17px;">
-                            {% if request.user == reply.user %}
-                            <img src="{% static 'core/media/delete.svg' %}" alt="delete comment" width="20" height="20" style="cursor: pointer;">
-                            {% endif %}
-                            <!-- <img src="{% static 'core/media/flag.svg' %}" alt="flag comment" width="20" height="20" style="cursor: pointer;"> -->
-                        </div>
-                    </section>                
-                </blockquote>
-                {% endfor %}
-            {% endif %}
-        </div>
-
-        <div id="replyComment" class="modal">
-            <div class="modal-content" style="max-width:600px">
-                <div style="padding: 0.01em;">
-                    <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">Add reply!</p>
-                    <span onclick="document.getElementById('replyComment').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
-                </div>
-                <form class="modal-container" method="POST" action="">
-                    {% csrf_token %}
-                    <div class="modal-section">
-                        <div>
-                            <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" placeholder="This conversation is moderated." required></textarea>
-                            <input type="hidden" name="parent_id" value="{{ comment.pk }}">
-                            <p style="color: #929292; font-size: small; padding-top: 1px;">1/420 maximum characters.</p>
-                        </div>
-                        <div style="display: flex; justify-content: right; padding-top: 4px;">
-                            <button class="modal-btn-alt" type="submit" name="submitcomment">Send</button>
-                            <button class="modal-btn" onclick="document.getElementById('replyComment').style.display='none'" type="button">Cancel</button>
-                        </div>
+            {% if user.is_authenticated %}
+            <div id="replyComment" class="modal">
+                <div class="modal-content" style="max-width:600px">
+                    <div style="padding: 0.01em;">
+                        <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">Reply!</p>
+                        <span onclick="document.getElementById('replyComment').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
                     </div>
-                </form>
+                    <form class="modal-container" method="POST" action=".">
+                        {% csrf_token %}
+                        <div class="modal-section">
+                            <div>
+                                {{ form.content }}
+                                <input type="hidden" name="parent_id" value="{{ comment.pk }}">
+                                <p style="color: #929292; font-size: small; padding-top: 1px;">1/420 maximum characters.</p>
+                            </div>
+                            <div style="display: flex; justify-content: right; padding-top: 4px;">
+                                <button class="modal-btn-alt" type="submit" name="submitcomment">Send</button>
+                                <button class="modal-btn" onclick="document.getElementById('replyComment').style.display='none'" type="button">Cancel</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
+            {% else %}
+            <div id="replyComment" class="modal">
+                <div class="modal-content" style="max-width:600px">
+                    <div style="padding: 0.01em;">
+                        <p style="text-align: left; color: #000; font-size: large; font-weight: bold;">You must be logged in to reply!</p>
+                        <span onclick="document.getElementById('replyComment').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% for reply in comment.replies %}
+            <blockquote class="replyBox">
+                <section style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-start;">
+                    <div>
+                        <p style="text-transform: capitalize; color: #c2c2c2b9; font-weight: bolder;">{{ reply.user.alias }}</p>
+                        <p style="color: #c2c2c2b9;">{{ reply.timestamp | timesince }} ago</p>
+                        <br>
+                        <p>{{ reply.content | safe }}</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row; gap: 17px;">
+                        {% if request.user == reply.user %}
+                        <img src="{% static 'core/media/delete.svg' %}" alt="delete comment" width="20" height="20" style="cursor: pointer;">
+                        {% endif %}
+                        <!-- <img src="{% static 'core/media/flag.svg' %}" alt="flag comment" width="20" height="20" style="cursor: pointer;"> -->
+                    </div>
+                </section>                
+            </blockquote>
+            {% endfor %}
         </div>
-
         {% endfor %}
     </div> 
     {% endif %}
 </div>
-
 {% if user.is_authenticated %}
 <div id="newComment" class="modal">
     <div class="modal-content" style="max-width:600px">
+
         <div style="padding: 0.01em;">
             <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">Add a comment!</p>
             <span onclick="document.getElementById('newComment').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
         </div>
-        <form class="modal-container" method="POST" action=".">
-            {% csrf_token %}
+
+        <form method="POST" action="." class="modal-container">{% csrf_token %}
             <div class="modal-section">
                 <div>
-                    <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" placeholder="This conversation is moderated." required></textarea>
+                    <!-- {{ form }} -->
+                    <!-- <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" placeholder="This conversation is moderated."></textarea> -->
+                    {{ form.content }}
                     <p style="color: #929292; font-size: small; padding-top: 1px;">1/420 maximum characters.</p>
                 </div>
                 <div style="display: flex; justify-content: right; padding-top: 4px;">
@@ -238,19 +244,3 @@
 </div>
 {% endif %}
 {% endblock page %}
-
-{% block footer %}
-<footer>
-    <!-- <div id="footersocial">
-        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
-        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
-    </div> -->
-    <!-- <span>
-        <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">Feedback</a>
-    </span> -->
-    <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
-    <!-- <span>
-        <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
-    </span> -->
-</footer>
-{% endblock footer %}
