--- a/store/static/store/catalogue.css
+++ b/store/static/store/catalogue.css
@@ -40,7 +40,7 @@ footer {
     bottom: 0;
     width: 100%;
     border-top: 1px solid silver;
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
